# log-inspector

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
.homebrew/: log-inspector.rb
Formula/: log-inspector.rb
src/: chunk_strategy.rs  chunk_strategy_tests.rs  config.rs  error_types.rs  log_inspector.rs  log_reader.rs  main.rs  openai_client.rs
