[package]
name = "log-inspector"
version = "0.1.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
dirs = "5.0"
toml = "0.8.20"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3.8"

