[package]
name = "log-inspector"
version = "0.1.2"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
dirs = "5.0"
toml = "0.8.20"
dotenvy = "0.15"
langchain-rust = { version = "4.6.0"}
sqlite-vec = "0.1.6"
async-openai = "0.28.0"
async-trait = "0.1.87"
futures = "0.3.31"
colored = "3.0.0"
indicatif = "0.17.11"

[dev-dependencies]
tempfile = "3.8"

